--- a/Weather-Forecast/app/src/main/res/values/strings.xml
+++ b/Weather-Forecast/app/src/main/res/values/strings.xml
@@ -1,8 +1,14 @@
 <resources>
     <string name="app_name">Weather Forecast</string>
-    <string name="location">Singapore</string>
 
-    <string name="min_max_temperature">%d° - %d°</string>
+    <string name="location">Singapore</string>
+    <string name="min_max_temperature">%d°C - %d°C</string>
+    <string name="pressure_template">Pressure: %.2f hPa</string>
+    <string name="wind_speed_template">Wind Speed: %.2f m/s</string>
+    <string name="max_temperature">Max: %d°C</string>
+    <string name="min_temperature">Min: %d°C</string>
+    <string name="temperature">%d°C</string>
 
     <string name="error_msg">There is an error at the moment. Please try again.</string>
+
 </resources>
